# httpexperiment

./: .gitignore
app/: pubspec.yaml
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/macos/Runner.xcodeproj/: project.pbxproj
cocoahttp/: .packages  README.md  cocoahttp.dart  cocoahttp.dynlib  cocoahttp.m  ffigen.yaml  pubspec.yaml
cocoahttp/.dart_tool/: package_config.json
cocoahttp/example/: .metadata  README.md  main.dart  pubspec.yaml
cocoahttp/example/lib/: main.dart
cocoahttp/ios/: cocoahttp.podspec
cocoahttp/ios/Classes/: cocoahttp.m  dart_api_dl.c
cocoahttp/lib/: cocoahttp.dart  cocoahttp_bindings_generated.dart
cocoahttp/macos/: cocoahttp.podspec
cocoahttp/macos/Classes/: cocoahttp.c
cocoahttp/src/: CMakeLists.txt  cocoahttp.h  cocoahttp.m
cupertinohttp/: .metadata  README.md  ffigen.yaml  pubspec.yaml
cupertinohttp/example/: README.md  cupertinohttp_example.dart  pubspec.yaml
cupertinohttp/example/lib/: main.dart
cupertinohttp/ios/: cupertinohttp.podspec
cupertinohttp/ios/Classes/: cupertinohttp.m
cupertinohttp/ios/Frameworks/: libmylib_dylib.dylib  libmylib_dylib_dependency.dylib
cupertinohttp/lib/: cupertinohttp.dart  cupertinohttp_bindings_generated.dart
cupertinohttp/lib/src/: nsurlsession_bindings.dart
cupertinohttp/macos/: cupertinohttp.podspec
cupertinohttp/macos/Classes/: cupertinohttp.c
cupertinohttp/src/: CMakeLists.txt  SendPortOperationQueue.h  SendPortOperationQueue.m  cupertinohttp.c  mylib_dylib.c  mylib_dylib.h  mylib_dylib_dependency.c  mylib_dylib_dependency.h  urlsessionhelper.h  urlsessionhelper.m
cupertinohttp/test/: client_test.dart  cupertinohttp_test.dart
cupertinohttp/tool/: build.dart
objcffitest/: cocoahttp.dart  httpclientmain.dart  main.dart  nsurlsession_bindings.dart  out.txt  pubspec.yaml  urlsessionhelper.dynlib
objcffitest/src/: urlsessionhelper.h  urlsessionhelper.m
objcffitest/urlsessionhelper.dynlib.dSYM/Contents/: Info.plist
platformhttp/: README.md  pubspec.yaml
platformhttp/android/: build.gradle  settings.gradle
platformhttp/example/: README.md  pubspec.yaml
platformhttp/example/lib/: main.dart
platformhttp/example/test/: widget_test.dart
platformhttp/example/windows/: CMakeLists.txt
platformhttp/ios/: platformhttp.podspec
platformhttp/ios/Classes/: PlatformhttpPlugin.h  (+2 more)
platformhttp/lib/: platformhttp.dart
platformhttp/macos/: platformhttp.podspec
platformhttp/test/: platformhttp_test.dart
platformhttp/windows/: CMakeLists.txt  platformhttp_plugin.cpp
simplehttpclient/: pubspec.yaml
simplehttpclient/lib/: simplehttpclient.dart
volleyhttp/: README.md  pubspec.yaml
volleyhttp/android/: build.gradle  settings.gradle
volleyhttp/example/: README.md  pubspec.yaml
volleyhttp/lib/: volley_client.dart  volleyhttp.dart
volleyhttp/test/: volleyhttp_test.dart
(+40 files in other folders)
